--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -34,6 +34,12 @@ $gold: #dba514;
     font-size: 18px;
     cursor:pointer;
   }
+  .lis {
+    list-style-type: none;
+    font-size: 18px;
+    cursor:pointer;
+    font-weight: 700;
+  }
   ul {
     display: flex;
     // color: $base-color;
@@ -791,6 +797,9 @@ $gold: #dba514;
   .header li {
     font-size: 18px !important;
   }
+  .header .lis {
+    font-size: 18px !important;
+  }
   .hlogo {
     width: 80px !important;
     height: 50px !important;
@@ -1254,6 +1263,9 @@ width: 100% !important;
     margin: 20px auto !important;
   }
   .header li {
+    font-size: 16px !important;
+  }
+  .header .lis {
     font-size: 16px !important;
   }
   .hlogo {
