--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,6 +28,12 @@
   font-size: 18px;
   cursor: pointer;
 }
+.header .lis {
+  list-style-type: none;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: 700;
+}
 .header ul {
   display: flex;
   justify-content: space-between;
@@ -738,6 +744,9 @@
   .header li {
     font-size: 18px !important;
   }
+  .header .lis {
+    font-size: 18px !important;
+  }
   .hlogo {
     width: 80px !important;
     height: 50px !important;
@@ -1154,6 +1163,9 @@
     margin: 20px auto !important;
   }
   .header li {
+    font-size: 16px !important;
+  }
+  .header .lis {
     font-size: 16px !important;
   }
   .hlogo {
