--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 
 body {
   color: rgb(var(--foreground-rgb));
